--- a/index.html
+++ b/index.html
@@ -8,109 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 1
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 2
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 3
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 4
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 5
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 6
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 7
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 8
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 9
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 10
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 11
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-1 border">
-                <div class="bg-cyan">
-                    space 12
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-2 col-lg-4 border">
-                <div class="bg-cyan">
-                    space 1
-                </div>
-            </div>
-            <div class="col-md-7 col-lg-4 border">
-                <div class="bg-cyan">
-                    space 2
-                </div>
-            </div>
-            <div class="col-md-3 col-lg-4 border">
-                <div class="bg-cyan">
-                    space 3
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-7 col-lg-6 border">
-                <div class="bg-cyan">
-                    space 1
-                </div>
-            </div>
-            <div class="col-md-5 col-lg-6 border">
-                <div class="bg-cyan">
-                    space 2
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-lg-2 border">
-                <div class="bg-cyan">
-                    space 1
-                </div>
-            </div>
-            <div class="col-md-4 col-lg-10 border">
-                <div class="bg-cyan">
-                    space 2
-                </div>
-            </div>
-        </div>
+        Hola Amigos Soy Edgar y esta es mi rama
     </div>
 </body>
 </html>
